--- a/app/src/main/res/layout-v16/activity_main.xml
+++ b/app/src/main/res/layout-v16/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -11,21 +12,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ellophantdesign.haayhappen.Buttons.MainActivity">
 
-
-    <Button
-        android:id="@+id/btn_scores"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btn_new_game"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/button_style"
-        android:onClick="OnScoresPressed"
-        android:text="@string/scores_button_txt"
-        android:textColor="#ffffff"
-        android:textSize="25sp" />
 
     <Button
         android:id="@+id/btn_playername"
@@ -43,36 +29,59 @@
         android:textSize="15sp" />
 
 
-    <Button
-        android:id="@+id/btn_new_game"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="118dp"
-        android:background="@drawable/button_style"
-        android:onClick="OnNewGamePressed"
-        android:text="@string/new_game_button_txt"
-        android:textColor="#ffffff"
-        android:textSize="25sp" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="71dp"
         android:fontFamily="cursive"
         android:text="@string/logo_text"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:textSize="80sp" />
+        android:textSize="70sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/btn_new_game"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
+        android:onClick="OnNewGamePressed"
+        android:text="@string/new_game_button_txt"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/btn_scores"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
+        android:onClick="OnScoresPressed"
+        android:text="@string/scores_button_txt"
+        android:textColor="#ffffff"
+        android:textSize="25sp"
+        android:layout_below="@+id/btn_new_game"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
+
+    <ImageButton
+        android:id="@+id/vibrationbutton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_vibration_on"
+        android:textColor="@android:color/white"
+        android:layout_weight="1"
+        android:layout_above="@+id/btn_playername"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        app:srcCompat="@drawable/button_style"
+        android:onClick="vibration_toggled" />
 
 
 </RelativeLayout>
