--- a/app/src/main/res/layout-xlarge/activity_icongame.xml
+++ b/app/src/main/res/layout-xlarge/activity_icongame.xml
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="3"
-        android:background="@android:color/white">
+        android:weightSum="3">
 
 
         <LinearLayout
@@ -30,7 +29,7 @@
                 android:layout_weight="0.49"
                 android:text="Time:"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="20sp" />
+                android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/timerTextView"
@@ -39,7 +38,7 @@
                 android:layout_weight="1.53"
                 android:text="30"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="20sp" />
+                android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/lifetextview"
@@ -48,7 +47,7 @@
                 android:layout_weight="0.27"
                 android:text="Lifes"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:textSize="20sp" />
+                android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/lifestextview"
@@ -56,16 +55,16 @@
                 android:layout_height="wrap_content"
                 android:text="3"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:layout_weight="0.51"
-                android:textSize="20sp" />
+                android:textSize="40sp"
+                android:layout_weight="0.51" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Score:"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:layout_weight="0.46"
-                android:textSize="20sp" />
+                android:textSize="40sp"
+                android:layout_weight="0.46" />
 
             <TextView
                 android:id="@+id/gamescore"
@@ -73,8 +72,8 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:textColor="@color/common_google_signin_btn_text_light_focused"
-                android:layout_weight="0.65"
-                android:textSize="20sp" />
+                android:textSize="40sp"
+                android:layout_weight="0.65" />
 
         </LinearLayout>
 
@@ -83,35 +82,21 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:background="@android:color/white"
-            android:padding="20dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:layout_marginBottom="100dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="80dp" />
-        <Button
-            android:id="@+id/screenbackground"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:background="@android:color/white"
-            />
+            android:background="@android:color/white" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:orientation="horizontal"
             android:weightSum="4"
-            android:layout_height="100dp">
+            android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/burgerButton"
                 android:layout_weight="1"
                 android:background="@drawable/ic_hamburger"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_margin="15dp" />
+                android:layout_width="@dimen/box_size"
+                android:layout_height="@dimen/box_size"
+                />
                 <!--android:layout_width="100sp"
                 android:layout_height="100sp" -->
 
@@ -120,18 +105,18 @@
                 android:id="@+id/lettuceButton"
                 android:layout_weight="1"
                 android:background="@drawable/ic_lettuce"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_margin="15dp" />
+                android:layout_width="@dimen/box_size"
+                android:layout_height="@dimen/box_size"
+                />
 
 
             <Button
                 android:id="@+id/eggButton"
                 android:layout_weight="1"
                 android:background="@drawable/ic_fried_egg"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_margin="15dp" />
+                android:layout_width="@dimen/box_size"
+                android:layout_height="@dimen/box_size"
+                />
 
             <Button
                 android:id="@+id/cupcakeButton"
@@ -139,9 +124,9 @@
                 android:background="@drawable/ic_cupcake"
                 android:scaleType="centerInside"
                 android:adjustViewBounds="true"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_margin="15dp" />
+                android:layout_width="@dimen/box_size"
+                android:layout_height="@dimen/box_size"
+                />
         </LinearLayout>
 
 
@@ -151,24 +136,24 @@
         android:id="@+id/btn_start_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textview_instructions"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:background="@drawable/grey_button_style"
         android:padding="20dp"
         android:text="Start Game!"
         android:textColor="@color/common_google_signin_btn_text_light_default"
-        android:layout_below="@+id/textview_instructions"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp" />
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/textview_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="149dp"
+        android:layout_marginTop="186dp"
         android:text="Hit the icon you see as fast as you can"
         android:textColor="@color/common_google_signin_btn_text_light_focused"
-        android:textSize="20sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="40sp" />
 
 </RelativeLayout>
